Make live chat script load asynchronously
Updated live chat script to load asynchronously.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Example</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://prod15-live-chat.sprinklr.com/livechat.js"></script>
+ <script src="https://prod15-live-chat.sprinklr.com/livechat.js" async></script>
 
 </head>
 <body class="bg-gray-100">
